# solana-move

./: .gitignore  AI_FEATURES.md  ARCHITECTURE.md  DEVELOPMENT_SUMMARY.md  EXECUTION_GUIDE.md  FINAL_STATUS.md  IMPROVEMENTS.md  PRODUCTION_READY.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  README_UPDATED.md  SUMMARY.md  TECHNICAL_ROADMAP.md  TEST_RESULTS.md  USER_GUIDE.md  demo.sh  demo_ai_integration.py  demo_ai_simple.py  test_basic.sh  test_defi.sh  test_e2e.sh  test_parser.py
ai-integration/: .env.example  AI_INTEGRATION_DESIGN.md  advanced_ai_engine.py  ai_assistant.py  ai_config.py  requirements.txt
business/: pricing_model.yaml  saas_platform.md
core/traits/: token.rs
core/types/: mod.rs
defi-output/amm/aptos/: amm_dex.move
defi-output/amm/solana/: amm_dex.rs
dsl-compiler/: Cargo.toml  README.md  grammar.pest  grammar_enhanced.pest
dsl-compiler/examples/: amm_dex.ccdsl  lending_protocol.ccdsl  token.ccdsl
dsl-compiler/src/: lib.rs  main.rs  optimizer.rs  parser.rs  semantic.rs  semantic_analyzer.rs
dsl-compiler/src/codegen/: mod.rs  move_gen.rs  solana.rs
dsl-compiler/tests/: integration_test.rs  optimizer_tests.rs  parser_tests.rs  semantic_tests.rs
formal-verification/: Cargo.toml
formal-verification/src/: invariants.rs  lib.rs  proof_generator.rs  property_checker.rs  symbolic_execution.rs  verifier.rs
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
marketplace/: plugin_system.py
move-impl/aptos/: Move.toml
move-impl/aptos/sources/: token.move
scripts/: setup-demo.sh
solana-impl/programs/: Cargo.toml
solana-impl/programs/src/: lib.rs
tools/deployer/: deploy.sh
vscode-extension/: package.json
vscode-extension/snippets/: ccdsl.json
vscode-extension/syntaxes/: ccdsl.tmLanguage.json
