[package]
name = "ccdsl-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dashmap = "5.5"
ropey = "1.6"
once_cell = "1.19"

# Reuse the DSL compiler as a library
cross-chain-dsl = { path = "../dsl-compiler" }

[dev-dependencies]
insta = "1.34"