[package]
name = "solana-token-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_token_impl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
anchor-client = "0.29.0"
solana-sdk = "1.17.0"
solana-program-test = "1.17.0"